#2687 Normalize Capella model code and tests
Change-Id: Ibcd5f8badb5c2e7aaf39b8429fd3a9da3eca5354
Signed-off-by: Erwann Traisnel <erwann.traisnel@obeo.fr>